--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="index.css">
 </head>
 <body class="bg-background-dark text-white overflow-hidden">
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="index.tsx"></script>
 </body>
 </html>
